[project]
name = "colab-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zvi Boshernitzan", email = "zvi.boshernitzan@gmail.com" }
]
requires-python = ">=3.13.1"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
